@@ -1,3 +1,7 @@
+2011-12-28  Holger Vogt
+ * cktdest.c: reduce memory leaks for command 'reset'
+   bug no. 3229770
+
 2011-12-27  Robert Larice
  * visualc/vngspice.vcproj ,
  * visualc/include/config.h ,
